--- a/app/templates/rechercher.html
+++ b/app/templates/rechercher.html
@@ -13,6 +13,28 @@
                         <span class="error-message">{{ error }}</span>
                     {% endfor %}
                 </div>
+                <div class="form-group">
+                    {{ form.visite.label(class="form-label") }}
+                    {% for subfield in form.visite %}
+                        <div class="form-check">
+                            {{ subfield(class="form-check-input") }}
+                            <label class="form-check-label" for="{{ subfield.id }}">
+                                {{ subfield.label.text }}
+                            </label>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="form-group">
+                    {{ form.labellise.label(class="form-label") }}
+                    {% for subfield in form.labellise %}
+                        <div class="form-check">
+                            {{ subfield(class="form-check-input") }}
+                            <label class="form-check-label" for="{{ subfield.id }}">
+                                {{ subfield.label.text }}
+                            </label>
+                        </div>
+                    {% endfor %}
+                </div>
                 <div class="d-grid gap-2">
                     {{ form.submit(class="btn btn-primary") }}
                 </div>
