--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -91,6 +91,9 @@
     </div>
 
     <!-- Bouton retour -->
-    <a href="{{ url_for('main.rechercher') }}" class="btn-back">← Retour à la liste</a>
+    <<a href="#" onclick="window.history.back(); return false;" class="btn-back">← Retour à la liste</a>
+
+
+
 </div>
 {% endblock %}
