--- a/app/templates/liste_etablissements.html
+++ b/app/templates/liste_etablissements.html
@@ -1,79 +1,85 @@
 {% extends "base.html" %}
 {% block scripts_head %}
+    <script>
+    const nom = "{{ request.args.get('nom') }}";
+    const visite = "{{ request.args.get('visite') }}";
+    const labellise = "{{ request.args.get('labellise') }}";
+</script>
 <script>
     let map;
     let markers = [];
 
     // Définissez la fonction initMap au niveau global
-    window.initMap = function() {
-        console.log("Initialisation de la carte...");
-        const mapElement = document.getElementById("map");
-        if (!mapElement) {
-            console.error("Élément #map introuvable !");
-            const mapContainer = document.getElementById("map-container");
-            if (mapContainer) {
-                mapContainer.innerHTML = "<p style='color: red;'>Erreur : Impossible de charger la carte.</p>";
-            } else {
-                console.error("Élément #map-container introuvable !");
-            }
-            return;
+   window.initMap = function() {
+    console.log("Initialisation de la carte...");
+    const mapElement = document.getElementById("map");
+    if (!mapElement) {
+        console.error("Élément #map introuvable !");
+        const mapContainer = document.getElementById("map-container");
+        if (mapContainer) {
+            mapContainer.innerHTML = "<p style='color: red;'>Erreur : Impossible de charger la carte.</p>";
+        } else {
+            console.error("Élément #map-container introuvable !");
         }
-        map = new google.maps.Map(mapElement, {
-            center: { lat: 46.2276, lng: 2.2137 }, // Coordonnées approximatives du centre de la France
-            zoom: 6, // Niveau de zoom pour afficher toute la France
+        return;
+    }
+    map = new google.maps.Map(mapElement, {
+        center: { lat: 46.2276, lng: 2.2137 }, // Coordonnées approximatives du centre de la France
+        zoom: 6, // Niveau de zoom pour afficher toute la France
+    });
+    console.log("Carte initialisée avec succès !");
+    const etablissements = {{ etablissements_json|tojson|safe }};
+    const infowindow = new google.maps.InfoWindow(); // Déplacez cette ligne ici
+    etablissements.forEach(etablissement => {
+        // L'icône change selon que le lieu a été visité et/ou labellisé
+        let icon;
+        if (etablissement.visite && etablissement.label) {
+            icon = "http://maps.google.com/mapfiles/ms/icons/yellow-dot.png";
+        } else if (etablissement.visite) {
+            icon = "http://maps.google.com/mapfiles/ms/icons/red-dot.png";
+        } else {
+            icon = "http://maps.google.com/mapfiles/ms/icons/blue-dot.png";
+        }
+        const marker = new google.maps.Marker({
+            position: { lat: etablissement.latitude, lng: etablissement.longitude },
+            map: map,
+            title: etablissement.nom,
+            icon: icon // Ajoutez l'icône appropriée
         });
-        console.log("Carte initialisée avec succès !");
-        const etablissements = {{ etablissements_json|tojson|safe }};
-        etablissements.forEach(etablissement => {
-            // L'icône change selon que le lieu a été visité et/ou labellisé
-            let icon;
-            if (etablissement.visite && etablissement.label) {
-                icon = "http://maps.google.com/mapfiles/ms/icons/yellow-dot.png";
-            } else if (etablissement.visite) {
-                icon = "http://maps.google.com/mapfiles/ms/icons/red-dot.png";
-            } else {
-                icon = "http://maps.google.com/mapfiles/ms/icons/blue-dot.png";
-            }
-            const marker = new google.maps.Marker({
-                position: { lat: etablissement.latitude, lng: etablissement.longitude },
-                map: map,
-                title: etablissement.nom,
-                icon: icon // Ajoutez l'icône appropriée
-            });
-            const infowindow = new google.maps.InfoWindow({
-                content: `
-                    <div class="infowindow">
-                        <h3>${etablissement.nom}</h3>
-                        <p>${etablissement.adresse}, ${etablissement.code_postal} ${etablissement.ville}</p>
-                        <a href="${etablissement.url}" target="_blank" tabindex="-1" style="outline: none;">Voir la fiche</a>
-                    </div>
-                `,
-                pixelOffset: new google.maps.Size(0, -30),
-            });
-            marker.addListener("click", () => {
-                setTimeout(() => {
-                    infowindow.open(map, marker);
-                    const card = document.querySelector(`.carte[data-id="${etablissement.id_etab}"]`);
-                }, 50);
-            });
-            markers.push(marker);
-        });
-        // Créer un élément div pour la légende
-        const legend = document.createElement('div');
-        legend.style.backgroundColor = 'white';
-        legend.style.padding = '10px';
-        legend.style.margin = '10px';
-        legend.style.border = '1px solid #ccc';
-        // Ajouter le contenu de la légende
-        legend.innerHTML = `
-            <h3>Légende</h3>
-            <p><img src="http://maps.google.com/mapfiles/ms/icons/blue-dot.png" alt="Non visité">Non visité</p>
-            <p><img src="http://maps.google.com/mapfiles/ms/icons/red-dot.png" alt="Visité"> Visité</p>
-            <p><img src="http://maps.google.com/mapfiles/ms/icons/yellow-dot.png" alt="Labellisé">Labellisé</p>
+        const detailsUrl = `/etablissement/${etablissement.id_etab}?nom=${nom}&visite=${visite}&labellise=${labellise}`;
+        const content = `
+            <div class="infowindow">
+                <h3>${etablissement.nom}</h3>
+                <p>${etablissement.adresse}, ${etablissement.code_postal} ${etablissement.ville}</p>
+                <a href="${detailsUrl}">Voir la page</a>
+            </div>
         `;
-        // Ajouter la légende à la carte
-        map.controls[google.maps.ControlPosition.LEFT_BOTTOM].push(legend);
-    };
+        marker.addListener("click", () => {
+            setTimeout(() => {
+                infowindow.setContent(content);
+                infowindow.open(map, marker);
+                const card = document.querySelector(`.carte[data-id="${etablissement.id_etab}"]`);
+            }, 50);
+        });
+        markers.push(marker);
+    });
+    // Créer un élément div pour la légende
+    const legend = document.createElement('div');
+    legend.style.backgroundColor = 'white';
+    legend.style.padding = '10px';
+    legend.style.margin = '10px';
+    legend.style.border = '1px solid #ccc';
+    // Ajouter le contenu de la légende
+    legend.innerHTML = `
+        <h3>Légende</h3>
+        <p><img src="http://maps.google.com/mapfiles/ms/icons/blue-dot.png" alt="Non visité">Non visité</p>
+        <p><img src="http://maps.google.com/mapfiles/ms/icons/red-dot.png" alt="Visité"> Visité</p>
+        <p><img src="http://maps.google.com/mapfiles/ms/icons/yellow-dot.png" alt="Labellisé">Labellisé</p>
+    `;
+    // Ajouter la légende à la carte
+    map.controls[google.maps.ControlPosition.LEFT_BOTTOM].push(legend);
+};
+
 
     // Ajouter un écouteur d'événement pour DOMContentLoaded
     document.addEventListener('DOMContentLoaded', function() {
