--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -37,7 +37,7 @@
                     {% endif %}
                 </div>
                 <p class="type">{{ flan.description or "Un flan flantastique" }}</p>
-                <span class="arrow">→</span>
+
             </div>
         </a>
         {% endfor %}
@@ -91,7 +91,7 @@
     </div>
 
     <!-- Bouton retour -->
-    <<a href="#" onclick="window.history.back(); return false;" class="btn-back">← Retour à la liste</a>
+    <a href="#" onclick="window.history.back(); return false;" class="btn-back">← Retour à la liste</a>
 
 
 
