--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -70,7 +70,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     text-align: center;
     margin-bottom: 30px;
-    color: white; /* Pour les titres sur fond bleu */
+    color: white;
 }
 /* Boutons - Version standard */
 .btn, .btn-primary, .btn-success, .btn-info, .btn-back,
