--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -72,9 +72,9 @@
                   <div class="evaluation-content">
                       <div class="evaluation-left">
                           <h3 style="color: #333; margin-bottom: 10px; font-family: 'Bubblegum', cursive !important;">
-                              Evaluation pour {{ evaluation.flan.nom }}
+                              Evaluation pour {{ evaluation.flan.nom }} de {{ evaluation.flan.etablissement.nom }}
                               <small style="color: #7f8c8d; font-size: 0.9em; font-weight: normal;">
-                                  {{ evaluation.date_creation.strftime('%d/%m/%Y') }}
+                                  laissee le {{ evaluation.date_creation.strftime('%d/%m/%Y') }}
                               </small>
                           </h3>
 
